# python-web-scrapper

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
