[project]
name = "python-web-scrapper"
version = "0.1.1"
description = "Python web scrapper"
authors = [{ name = "Kevin Halley", email = "keuwey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250328",
]

[dependency-groups]
dev = ["mypy>=1.18.1", "pyright>=1.1.405", "ruff>=0.13.2"]
