[project]
name = "python-web-scrapper"
version = "0.1.1"
description = "Python web scrapper"
authors = [{ name = "Kevin Halley", email = "keuwey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check --fix *.py && ruff format *.py"
typecheck = "mypy *.py && pyright *.py"
